<resources>
    <string name="app_name">Yusr</string>
    <string name="entgrp">Enter Group Name</string>
    <string name="svgrp">Save Group</string>
    <string name="entcrdid">Enter the card number</string>
    <string name="entph">Enter  phone number</string>
    <string name="send">Send</string>
    <string name="Add_place">Add Camp</string>
    <string name="Add_d">Add Camps for Map</string>
    <string name="show_place">Edit Camps</string>
    <string name="show_del">Show All Camps</string>
    <string name="Add_group">Add Group</string>
    <string name="Add_gd">Add Group to Database</string>
    <string name="manager_group">Manage Groups</string>
    <string name="show_g">Show And Manage Groups</string>
    <string name="entname">Enter Name</string>
    <string name="regist">Register</string>
    <string name="entpass">Enter Password</string>
    <string name="login">Sign in</string>
    <string name="forgetpass">Forget Your Password?</string>
    <string name="Add_l">Add Leader</string>
    <string name="Add_p">Add Pilgrim</string>
    <string name="manage_p">Manage Camps</string>
    <string name="logout">Sign Out</string>
    <string name="search">Search </string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="diapetes">Diabetes</string>
    <string name="pressure">Pressure sickness</string>
    <string name="allergies">Enter  type of Allergies</string>
    <string name="entage">Enter Age </string>
    <string name="lat">Latitude</string>
    <string name="lon">Longitude</string>
    <string name="nameplace">Name Camp</string>
    <string name="aream">Edit distance in meters</string>
    <string name="title_activity_drawer">Menu</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_showmaps">View map</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="errorhaj">You have moved away from the leader ... come back to the track</string>
    <string name="errortitle">be careful</string>
    <string name="saveb">Ok</string>
    <string name="canb">Cancel</string>
    <string name="callled"> Call Leader</string>
    <string name="editar"> Edit Area Distance</string>
    <string name="shgr">Display Group</string>
    <string name="edpro">Edit Profile</string>
    <string name="Activate_Notification"> Activate Notification</string>
    <string name="Stop_Notification">Stop Notification</string>
    <string name="Ysur">Yusr</string>
</resources>
