<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="5dp"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <EditText
        android:id="@+id/lati"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="50dp" />
<TextView
    android:gravity="center"
    android:text="@string/lat"
    android:layout_width="100dp"
    android:layout_height="50dp" />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <EditText
            android:id="@+id/longi"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="50dp" />
        <TextView
            android:gravity="center"
            android:text="@string/lon"
            android:layout_width="100dp"
            android:layout_height="50dp" />
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
    >
       <EditText
               android:id="@+id/nameplace"
               android:layout_weight="1"
               android:layout_width="wrap_content"
                 android:layout_height="50dp"/>
        <TextView
                android:gravity="center"
                android:text="@string/nameplace"
                android:layout_width="100dp"
                android:layout_height="50dp" />
    </LinearLayout>
</LinearLayout>