<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ForgotpassActivity"
        android:orientation="vertical"
        android:background="#fff"

>
    <ImageView android:layout_width="match_parent" android:layout_height="200dp"

               android:background="@drawable/header4"
    />
    <LinearLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
    >

        <EditText
                android:id="@+id/cardforgetlast"
                android:layout_weight="1"
                android:inputType="number"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:textAlignment="center"
                android:hint="@string/entcrdid"
                android:textColorHint="#0099ff"
                android:textColor="#0099ff"
        />
        <ImageView
                android:backgroundTint="@color/colorPrimary"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/idcard"
        />
    </LinearLayout>
    <LinearLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
    >

        <EditText
                android:id="@+id/phoneforgetlast"
                android:layout_weight="1"
                android:inputType="phone"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:textAlignment="center"
                android:hint="@string/entph"
                android:textColorHint="#0099ff"
                android:textColor="#0099ff"
        />
        <ImageView
                android:backgroundTint="@color/colorPrimary"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/phone"
        />
    </LinearLayout>
    <Button
            android:id="@+id/forgetpass"
            android:layout_width="match_parent"
            android:text="@string/send"
            android:textColor="#fff"
            android:layout_height="70dp"
            android:onClick="forgerpass"
            tools:ignore="OnClick"
            android:background="@drawable/border"
    />
</LinearLayout>