<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="#fff"
    >
    <android.support.design.widget.AppBarLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        >
        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collaps"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            app:layout_scrollFlags="exitUntilCollapsed|scroll"
            app:contentScrim="?attr/colorPrimaryDark"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:fitsSystemWindows="true"
            >
            <ImageView
                app:layout_collapseMode="parallax"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:background="@drawable/header4"
                android:scaleType="centerCrop"
                />
            <android.support.v7.widget.Toolbar
                android:id="@+id/tool"
                app:popupTheme="@style/Theme.AppCompat.Light.NoActionBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                >
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <LinearLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <EditText
            android:layout_weight="1"
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textAlignment="center"
            android:hint="@string/entcrdid"
            android:textColorHint="#0099ff"
            android:inputType="textEmailAddress"
            android:textColor="#0099ff"
            />
        <ImageView
            android:backgroundTint="@color/colorPrimary"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/idcard"
            />

    </LinearLayout>
    <LinearLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <EditText
android:id="@+id/passwordlg"
            android:layout_weight="1"
            android:inputType="textPassword"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:textAlignment="center"
            android:hint="@string/entpass"
            android:textColorHint="#0099ff"
            android:textColor="#0099ff"
            />
        <ImageView
            android:backgroundTint="@color/colorPrimary"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/keypass"
            />
    </LinearLayout>
    <Button
        android:id="@+id/loginbt"
        android:layout_width="match_parent"
        android:text="@string/login"
        android:textColor="#fff"
        android:layout_height="70dp"
        android:onClick="login"
        tools:ignore="OnClick"
        android:background="@color/colorPrimary"
        />
    <TextView
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    android:text="@string/forgetpass"
            android:onClick="forgetpass"
            tools:ignore="OnClick"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:background="#fff"
    />
</LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>