<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="#fff"
    >
    <android.support.design.widget.AppBarLayout

        android:background="@color/colorPrimary"
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        >
        <android.support.design.widget.CollapsingToolbarLayout

            android:id="@+id/collaps"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:layout_scrollFlags="exitUntilCollapsed|scroll"
            app:contentScrim="?attr/colorPrimaryDark"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:fitsSystemWindows="true"
            >
            <ImageView
                android:layout_gravity="center"
                app:layout_collapseMode="parallax"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/header4"
                android:scaleType="centerCrop"
                />
            <android.support.v7.widget.Toolbar
                android:id="@+id/tool"
                app:popupTheme="@style/Theme.AppCompat.Light.NoActionBar"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                app:layout_collapseMode="pin"
                >
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >
        <LinearLayout
            android:layout_margin="20dp"
            android:background="#fff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp"

            >
            <LinearLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <EditText
                    android:layout_weight="1"
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:textAlignment="center"
                    android:hint="@string/entname"
                    android:textColorHint="@color/colorPrimary"
                    android:textColor="@color/colorPrimary"
                    />
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/userreg"
                    />

            </LinearLayout>
            <LinearLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <EditText
                    android:id="@+id/cardid"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:textAlignment="center"
                    android:hint="@string/entcrdid"
                    android:textColorHint="@color/colorPrimary"
                    android:textColor="@color/colorPrimary"
                    />
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/idcard"
                    />
            </LinearLayout>
            <LinearLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <EditText
                    android:id="@+id/phone"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:textAlignment="center"
                    android:hint="@string/entph"
                    android:textColorHint="@color/colorPrimary"
                    android:textColor="@color/colorPrimary"
                    />
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/phone"
                    />
            </LinearLayout>

            <LinearLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <EditText
                    android:id="@+id/age"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:textAlignment="center"
                    android:hint="@string/entage"
                    android:textColorHint="@color/colorPrimary"
                    android:textColor="@color/colorPrimary"
                    />
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/age"
                    />
            </LinearLayout>
            <LinearLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <Spinner
                    android:id="@+id/blood"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:textAlignment="center"
                    android:textColor="#0099ff"
                    app:popupTheme="@style/AppTheme.PopupOverlay"
                    android:layout_gravity="center"
                    android:gravity="center"

                    />
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/blood"
                    />
            </LinearLayout>

            <LinearLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <CheckBox
android:layout_margin="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pressure"
android:textColor="@color/colorPrimary"
                        android:id="@+id/pressure"
                        />
                    <CheckBox
                        android:id="@+id/diabetes"
                        android:layout_margin="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/diapetes"
                        android:textColor="@color/colorPrimary"
                        />
                </LinearLayout>
                <ImageView
                    android:layout_marginTop="10dp"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/patient"
                    />
            </LinearLayout>
            <LinearLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/groupregister"
            >
            <RadioButton
                android:id="@+id/male"
                android:layout_margin="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:textColor="@color/colorPrimary"
                android:checked="true"
                />
            <RadioButton
                android:id="@+id/female"
                android:layout_margin="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textColor="@color/colorPrimary"
                />
        </RadioGroup>
                </LinearLayout>
                <ImageView
                    android:layout_marginTop="10dp"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/gender"
                    />
            </LinearLayout>
            <LinearLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <Spinner
                    android:id="@+id/spinnerreg"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:textAlignment="center"
                    android:textColor="#0099ff"
                    app:popupTheme="@style/AppTheme.PopupOverlay"
                    android:layout_gravity="center"
                    android:gravity="center"
                    />
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/groupreg"
                    />
            </LinearLayout>
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginBottom="30dp"
               >
               <Button
                   android:id="@+id/regbtn"
                   android:layout_width="match_parent"
                   android:text="@string/regist"
                   android:textColor="#fff"
                   android:background="@color/colorPrimary"
                   android:layout_height="70dp"
                   android:onClick="register"
                   tools:ignore="OnClick"
                   android:layout_margin="10dp"
                   />
           </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>