<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GroupActivity"
    android:background="#fff"

    >
    <android.support.design.widget.AppBarLayout

        android:background="@color/colorPrimary"
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        >
        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collaps"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            app:layout_scrollFlags="exitUntilCollapsed|scroll"
            app:contentScrim="?attr/colorPrimaryDark"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:fitsSystemWindows="true"

            >
            <ImageView
                app:layout_collapseMode="parallax"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:background="@drawable/header4"
                android:scaleType="centerCrop"
                />
            <android.support.v7.widget.Toolbar
                android:id="@+id/tool"
                app:popupTheme="@style/Theme.AppCompat.Light.NoActionBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                >
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="25dp"
            >
            <android.support.v7.widget.CardView
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layout_width="160dp"
                android:layout_height="190dp"
                android:layout_margin="10dp"
                android:onClick="addgroup"
                tools:ignore="OnClick"
                android:background="@color/colorPrimary"
                >
                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:background="@color/colorPrimary"
                    >
                    <ImageView
                        android:padding="5dp"
                        android:layout_width="80dp"
                        android:layout_height="70dp"
                        android:background="@drawable/circlecolorwhite"
                        android:src="@drawable/addgroup"
                        android:contentDescription="@string/Add_group"
                       />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Add_group"
                        android:textColor="#fff"
                        android:gravity="center"
                        android:layout_marginTop="5dp"
                        />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="10dp"
                        android:background="@color/cardview_light_background"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Add_gd"
                        android:textColor="#fff"
                        android:padding="5dp"
                        android:gravity="center"
                        />

                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layout_width="160dp"
                android:layout_height="190dp"
                android:layout_margin="10dp"
                android:onClick="showgroup"
                tools:ignore="OnClick">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:background="@color/colorPrimary"
                    >
                    <ImageView
                        android:padding="5dp"
                        android:layout_width="80dp"
                        android:layout_height="70dp"
                        android:background="@drawable/circlecolorwhite"
                        android:src="@drawable/showgroup"
                        android:contentDescription="@string/manager_group"
                        />
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/manager_group"
                            android:textColor="#fff"
                            android:gravity="center"
                            android:layout_marginTop="5dp"
                            tools:text="Edit group"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="10dp"
                        android:background="@color/cardview_light_background"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/show_g"
                        android:textColor="#fff"
                        android:padding="5dp"
                        android:gravity="center"
                        />

                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>